--- a/view/frontend/templates/widgets.phtml
+++ b/view/frontend/templates/widgets.phtml
@@ -5,7 +5,61 @@
 <h5>Heading Level 5</h5>
 <h6>Heading Level 6</h6>
 
-<h1>Buttons</h1>
+<h2>Buttons</h2>
 
 <button>Default button</button>
 <button class="action primary">Primary button</button>
+
+<h2>Colours</h2>
+
+<span class="styleguide-colourswatch">Primary Colour</span>
+<span class="styleguide-colourswatch">Secondary Colour</span>
+<span class="styleguide-colourswatch">Tertiary Colour</span>
+<span class="styleguide-colourswatch"></span>
+<span class="styleguide-colourswatch"></span>
+
+<h2>Typography</h2>
+
+<p>
+    Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nulla eget dolor lectus.
+</p>
+<p>
+    Class aptent <em>taciti sociosqu</em> ad <strong>litora torquent</strong> per conubia nostra.
+</p>
+
+<ul>
+    <li>Mauris a erat sed risus sodales venenatis</li>
+    <li>Praesent at tellus in mauris consequat consequat sed non lorem</li>
+    <li>Ut lobortis eros ut felis malesuada, eget molestie risus eleifend</li>
+</ul>
+
+<h2>Forms</h2>
+<p>
+    <input type="text" placeholder="Placeholder text"/>
+    <input type="text" placeholder="Placeholder text" value="Valid content" />
+    <input type="text" class="mage-error" placeholder="Placeholder text" value="Invalid content" />
+</p>
+
+<p>
+    <textarea>Textarea</textarea>
+</p>
+
+<p>
+    <input type="checkbox" /> Checkbox<br />
+    <input type="checkbox" checked="checked" /> Checkbox Checked
+</p>
+
+<p>
+    <select>
+        <option>Option 1</option>
+        <option>Option 2</option>
+        <option>Option 3</option>
+        <option>Option 4</option>
+        <option>Option 5</option>
+    </select>
+</p>
+
+<p>
+    <input type="radio" /> Radio<br />
+    <input type="radio" checked="checked" /> Radio selected
+</p>
